--- a/Försök3/Views/MainWindow.xaml
+++ b/Försök3/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Försök3.MainWindow"
+﻿<Window x:Class="Försök3.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,10 +8,7 @@
         mc:Ignorable="d"
         Title="Garderob" Height="auto" Width="auto"
         MinHeight="500" MinWidth="800" WindowStartupLocation="CenterScreen">
-    <Window.DataContext>
-        <vm:MainViewModel/>
-    </Window.DataContext>
-    
+
     <Grid Margin="0,-12,0,0">
         <DataGrid x:Name="byxGridd" Height="100" Width="205" ItemsSource="{Binding byxGarderob}"
                       AutoGenerateColumns="True">
